--- a/src/components/home/bookingform.css
+++ b/src/components/home/bookingform.css
@@ -158,3 +158,35 @@ select::after {
     flex-direction: column;
   }
 }
+
+.roundTripContainer {
+  transition: 0.5s;
+  overflow-y: none;
+  overflow-x: auto;
+  /* width: 400px; */
+}
+
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
