--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,36 +1,40 @@
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 .socialLinkContainer {
-    font-size: 18px;
-    display: inline-block;
-    color: #fff;
-    line-height: 1;
-    padding: 8px 0;
-    margin-right: 4px;
-    border-radius: 4px;
-    text-align: center;
-    width: 36px;
-    height: 36px;
-    transition: 0.3s;
-    background: #15141e;
+  font-size: 18px;
+  display: inline-block;
+  color: #fff;
+  line-height: 1;
+  padding: 8px 0;
+  margin-right: 4px;
+  border-radius: 4px;
+  text-align: center;
+  width: 36px;
+  height: 36px;
+  transition: 0.3s;
+  background: #15141e;
 }
 
 .socialLinkContainer:hover {
-    background-color: #c29c66;
+  background-color: #c29c66;
 }
 
 .nostyleUl {
-    list-style: none;
-    padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 .nostyleUl li div {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 .footer-top {
-    padding: 60px 0 30px 0;
+  padding: 60px 0 30px 0;
+}
+
+a {
+  text-decoration: none;
 }
